--- a/index.html
+++ b/index.html
@@ -1,51 +1,119 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-50R2JN508P"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-50R2JN508P');
     </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XML 格式化工具</title>
+    <meta name="description" content="在线 XML 格式化、压缩与复制工具，支持快速处理大段 XML 内容。">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&family=JetBrains+Mono:wght@400;500;600&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main class="container">
-        <header>
+    <div class="background-glow" aria-hidden="true"></div>
+    <main class="app-shell">
+        <header class="hero">
             <h1>XML 格式化工具</h1>
-            <p class="subtitle">快速格式化或压缩您的XML代码</p>
+            <p class="subtitle">本地处理，不上传服务器</p>
         </header>
-        
-        <section class="editor-section">
-            <div class="editor-container">
-                <div class="editor-actions">
-                    <button id="formatBtn" class="btn btn-primary" onclick="formatXML()">
-                        <span class="btn-icon">📝</span>
-                        格式化
+
+        <section class="workspace" aria-label="XML 编辑器">
+            <div class="toolbar">
+                <div class="toolbar-left">
+                    <button id="formatBtn" class="btn btn-primary" type="button">
+                        <span class="btn-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M8 6h13"></path>
+                                <path d="M8 12h13"></path>
+                                <path d="M8 18h13"></path>
+                                <path d="M3 6h.01"></path>
+                                <path d="M3 12h.01"></path>
+                                <path d="M3 18h.01"></path>
+                            </svg>
+                        </span>
+                        <span class="btn-spinner" aria-hidden="true"></span>
+                        <span class="btn-label">格式化</span>
                     </button>
-                    <button id="compressBtn" class="btn btn-secondary" onclick="compressXML()">
-                        <span class="btn-icon">🗜️</span>
-                        压缩
+                    <button id="compressBtn" class="btn btn-secondary" type="button">
+                        <span class="btn-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M4 7h16"></path>
+                                <path d="M4 12h10"></path>
+                                <path d="M4 17h7"></path>
+                            </svg>
+                        </span>
+                        <span class="btn-spinner" aria-hidden="true"></span>
+                        <span class="btn-label">压缩</span>
                     </button>
-                    <button id="copyBtn" class="btn btn-success" onclick="copyText()">
-                        <span class="btn-icon">📋</span>
-                        复制
+                    <button id="copyBtn" class="btn btn-ghost" type="button">
+                        <span class="btn-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="9" y="9" width="13" height="13" rx="2"></rect>
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                            </svg>
+                        </span>
+                        <span class="btn-spinner" aria-hidden="true"></span>
+                        <span class="btn-label">复制</span>
                     </button>
                 </div>
-                <textarea id="xmlInput" placeholder="请输入 XML 内容..." spellcheck="false"></textarea>
+                <div class="toolbar-right" aria-live="polite">
+                    <button id="themeToggleBtn" class="btn btn-theme" type="button" aria-label="切换主题">
+                        <span class="btn-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 3v2"></path>
+                                <path d="M12 19v2"></path>
+                                <path d="M3 12h2"></path>
+                                <path d="M19 12h2"></path>
+                                <circle cx="12" cy="12" r="4"></circle>
+                            </svg>
+                        </span>
+                        <span class="btn-label" id="themeToggleLabel">浅色</span>
+                    </button>
+                    <span class="stat-pill">字符 <strong id="charCount">0</strong></span>
+                    <span class="stat-pill">行数 <strong id="lineCount">0</strong></span>
+                </div>
             </div>
-            <div id="errorMessage" class="error-message" role="alert" aria-live="polite"></div>
+
+            <div class="editor-frame">
+                <div id="emptyState" class="empty-state">
+                    <p class="empty-title">粘贴 XML 或直接加载示例</p>
+                    <p class="empty-desc">支持快速格式化、压缩和复制。</p>
+                    <pre class="sample-preview">&lt;catalog&gt;
+  &lt;book id="bk101"&gt;
+    &lt;author&gt;Gambardella, Matthew&lt;/author&gt;
+  &lt;/book&gt;
+&lt;/catalog&gt;</pre>
+                    <button id="insertExampleBtn" class="btn btn-secondary" type="button">
+                        <span class="btn-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 5v14"></path>
+                                <path d="M5 12h14"></path>
+                            </svg>
+                        </span>
+                        <span class="btn-label">插入示例 XML</span>
+                    </button>
+                </div>
+                <textarea id="xmlInput" placeholder="请输入 XML 内容..." spellcheck="false" aria-label="XML 输入框"></textarea>
+            </div>
+
+            <div class="status-row">
+                <p id="errorMessage" class="error-message" role="alert" aria-live="polite"></p>
+                <p class="hint">快捷键：Ctrl/Cmd + Enter 格式化，Ctrl/Cmd + Shift + Enter 压缩</p>
+            </div>
         </section>
     </main>
-    <div id="toast" class="toast" role="alert" aria-live="polite"></div>
+
+    <div id="toast" class="toast" role="status" aria-live="polite"></div>
     <script src="script.js"></script>
 </body>
 </html>
