--- a/index.html
+++ b/index.html
@@ -23,8 +23,50 @@
     <div class="background-glow" aria-hidden="true"></div>
     <main class="app-shell">
         <header class="hero">
-            <h1>XML 格式化工具</h1>
-            <p class="subtitle">本地处理，不上传服务器</p>
+            <div class="hero-left">
+                <a
+                    class="github-link"
+                    href="https://github.com/ireflux/XML-Formatter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="在 GitHub 查看 XML-Formatter 仓库"
+                >
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                        <path
+                            fill="currentColor"
+                            d="M12 .5C5.65.5.5 5.66.5 12.03c0 5.1 3.3 9.42 7.88 10.95.58.11.79-.25.79-.56 0-.28-.01-1.2-.01-2.18-3.2.7-3.88-1.36-3.88-1.36-.52-1.33-1.28-1.69-1.28-1.69-1.05-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.71 1.26 3.37.97.1-.75.4-1.27.73-1.56-2.56-.3-5.25-1.28-5.25-5.69 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.5.11-3.12 0 0 .97-.31 3.17 1.18a11 11 0 0 1 5.77 0c2.2-1.5 3.16-1.18 3.16-1.18.64 1.62.24 2.83.12 3.12.74.81 1.19 1.84 1.19 3.1 0 4.43-2.7 5.38-5.28 5.67.41.36.78 1.07.78 2.16 0 1.56-.01 2.82-.01 3.2 0 .31.21.68.8.56A11.54 11.54 0 0 0 23.5 12.03C23.5 5.66 18.35.5 12 .5Z"
+                        ></path>
+                    </svg>
+                    <span>Source</span>
+                </a>
+            </div>
+            <div class="hero-main">
+                <h1>XML 格式化工具</h1>
+                <p class="subtitle">Format, minify, and copy XML quickly</p>
+            </div>
+            <div class="hero-right">
+                <span class="privacy-pill">本地处理，不上传服务器</span>
+                <button id="themeToggleBtn" class="btn btn-theme btn-icon-only" type="button" aria-label="切换到浅色主题">
+                    <span class="theme-icon sun-icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 3v2"></path>
+                            <path d="M12 19v2"></path>
+                            <path d="M3 12h2"></path>
+                            <path d="M19 12h2"></path>
+                            <path d="m5.64 5.64 1.41 1.41"></path>
+                            <path d="m16.95 16.95 1.41 1.41"></path>
+                            <path d="m5.64 18.36 1.41-1.41"></path>
+                            <path d="m16.95 7.05 1.41-1.41"></path>
+                            <circle cx="12" cy="12" r="4"></circle>
+                        </svg>
+                    </span>
+                    <span class="theme-icon moon-icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 3a7 7 0 1 0 9 9 9 9 0 1 1-9-9z"></path>
+                        </svg>
+                    </span>
+                </button>
+            </div>
         </header>
 
         <section class="workspace" aria-label="XML 编辑器">
@@ -67,18 +109,6 @@
                     </button>
                 </div>
                 <div class="toolbar-right" aria-live="polite">
-                    <button id="themeToggleBtn" class="btn btn-theme" type="button" aria-label="切换主题">
-                        <span class="btn-icon" aria-hidden="true">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M12 3v2"></path>
-                                <path d="M12 19v2"></path>
-                                <path d="M3 12h2"></path>
-                                <path d="M19 12h2"></path>
-                                <circle cx="12" cy="12" r="4"></circle>
-                            </svg>
-                        </span>
-                        <span class="btn-label" id="themeToggleLabel">浅色</span>
-                    </button>
                     <span class="stat-pill">字符 <strong id="charCount">0</strong></span>
                     <span class="stat-pill">行数 <strong id="lineCount">0</strong></span>
                 </div>
